7.0.2
 - New query function: `query_value`, queries and converts a single value.
7.0.1
 - Windows build fixes.
 - Documentation for writing your own string conversions.
 - `transaction_rollback` and children are now `sql_error`, not just `failure`.
7.0.0
 - Bumped minimum required C++ version to C++17.
 - Everything has changed.  If you're porting from older versions, be careful!
 - There is now only one connection class: `connection`.
 - Removed tablereader/tablewriter, replaced by stream_from/stream_to.
 - Removed obsolete transactor framework, replaced by post-C++11 one.
 - Removed old ways of invoking parameterised and prepared statements.
 - Session variables are no longer cached.
 - If you do weird stuff with setting/getting variables, it may break.
 - Reading a variable written from raw SQL, procedures, etc, will now work.
 - Prepared statements are now registered immediately.
 - If you do weird stuff with preparing/unpreparing statements, it may break.
 - Changed exceptions and errors for many error situations.
 - Mishandling prepared statements will now break the connection.
 - Many string references and const char pointers are now `std::string_view`.
 - New `zview` class wraps `string_view` for string with terminating zero.
 - The `stream_base` abstract base class is gone.
 - Transactions no longer have an `isolation_tag` nested type.
 - The `isolation_traits` type is gone.
 - There's no more `pqxx_exception`.  Complicated things too much.
 - `pqxx::string_traits<>::name()` has been replaced with `pqxx::type_name`.
 - `to_string()` can now handle `std::vector` (to produce an SQL array).
 - All `from_string()` that took a C string now take a `std::string_view`.
 - There are now separate `string_traits` and `null_traits` templates.
 - Enums outside classes are now scoped enums.
 - `error_verbosity` is no longer nested in connection.
 - `connection::get_verbosity` is gone.
 - Some enums have changed names: `accesspolicy` to `access_policy`, and so on.