@@ -88,6 +88,7 @@ install(
     PATTERN internal/libpq-forward.hxx
     PATTERN internal/sql_cursor.hxx
     PATTERN internal/statement_parameters.hxx
+    PATTERN internal/stream_iterator.hxx
     PATTERN internal/gates/connection-errorhandler.hxx
     PATTERN internal/gates/connection-largeobject.hxx
     PATTERN internal/gates/connection-notification_receiver.hxx
